# tiny-link-server

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/routes/: auth.rs  path.rs  user.rs
src/routes/app/: auth.rs  path.rs  user.rs
